# google-fit-reader

./: .gitignore  LICENSE  README.md  requirements-test.txt  requirements.txt  setup.cfg  tox.ini
src/google_fit_reader/: __init__.py  __main__.py  google_fit_reader.py
src/tests/: test_google_fit_reader.py
