# -*- coding: utf-8 -*-
[metadata]
name = google-fit-reader
version = 0.1.0
description = Given a directory of Google Fit activity files (either .JSON or .TCX format), will create a neatly formatted CSV for import into your favorite spreadsheet program such as Microsoft Excel or Google Sheets.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = google fit sheets microsoft excel parsers readers
maintainer = Blair Gemmer
author = Blair Gemmer
author_email = blair@intelligen.technology
maintainer-email = blair@intelligen.technology
url = https://github.com/blairg23/google-fit-reader
project_urls =
    Source=https://github.com/blairg23/google-fit-reader
    Tracker=https://github.com/blairg23/google-fit-reader/issues
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:

[options.packages.find]
where = src

;[options.entry_points]
;console_scripts =

[options.extras_require]
testing =
    faker
    pyfakefs
    pytest-cov
    pytest
    tox

;docs =
;    sphinx >= 2.0.0, < 3
;    towncrier >= 18.5.0
;    pygments-github-lexers >= 0.0.5
;    sphinxcontrib-autoprogram >= 0.1.5

[bdist_wheel]
universal = 1